--- a/src/ipyrun/_ipyblocks.ipynb
+++ b/src/ipyrun/_ipyblocks.ipynb
@@ -201,21 +201,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main] *",
+   "display_name": "Python [conda env:ipyautoui]",
    "language": "python",
-   "name": "conda-env-mf_main-py"
+   "name": "conda-env-ipyautoui-xpython"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
