--- a/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -18,8 +18,8 @@
     "import sys\n",
     "import pathlib\n",
     "\n",
-    "sys.path.append(str(pathlib.Path('../../src').resolve())) # append ipyrun. TODO: for dev only. remove at build time.\n",
-    "sys.path.append(str(pathlib.Path('../../../ipyautoui/src').resolve())) # append ipyautoui. TODO: for dev only. remove at build time.\n",
+    "#sys.path.append(str(pathlib.Path('../../src').resolve())) # append ipyrun. TODO: for dev only. remove at build time.\n",
+    "#sys.path.append(str(pathlib.Path('../../../ipyautoui/src').resolve())) # append ipyautoui. TODO: for dev only. remove at build time.\n",
     "\n",
     "import subprocess\n",
     "from pydantic import validator\n",
