--- a/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "37490da4-9a5f-494e-9428-03a675ca54b1",
    "metadata": {},
    "outputs": [],
@@ -18,8 +18,8 @@
     "import sys\n",
     "import pathlib\n",
     "\n",
-    "#sys.path.append(str(pathlib.Path('../../src').resolve())) # append ipyrun. TODO: for dev only. remove at build time.\n",
-    "#sys.path.append(str(pathlib.Path('../../../ipyautoui/src').resolve())) # append ipyautoui. TODO: for dev only. remove at build time.\n",
+    "sys.path.append(str(pathlib.Path('../../src').resolve())) # append ipyrun. TODO: for dev only. remove at build time.\n",
+    "sys.path.append(str(pathlib.Path('../../../ipyautoui/src').resolve())) # append ipyautoui. TODO: for dev only. remove at build time.\n",
     "\n",
     "import subprocess\n",
     "from pydantic import validator\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "77b7c163-d3dd-493f-baf3-ded7830df972",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "ba438ca2-e26f-4555-9e98-f5281fa86cc0",
    "metadata": {},
    "outputs": [
@@ -89,20 +89,13 @@
      "output_type": "stream",
      "text": [
       "📁 linegraph/\n",
-      "├─📄 in-test.lg.json\n",
+      "├─📄 linegraph_app.ipynb\n",
       "├─📁 linegraph_appdata/\n",
-      "│ └─📁 00-linegraph/\n",
-      "│   ├─📄 config-shell_handler.json\n",
-      "│   ├─📄 in-00-linegraph.lg.json\n",
-      "│   ├─📄 out-00-linegraph.csv\n",
-      "│   └─📄 out-00-linegraph.plotly.json\n",
       "├─📄 linegraph_app_tutorial.ipynb\n",
       "├─📁 linegraph_core/\n",
       "│ ├─📄 input_schema_linegraph.py\n",
       "│ ├─📄 script_linegraph.py\n",
       "│ └─📄 __init__.py\n",
-      "├─📄 out-test.csv\n",
-      "├─📄 out-test.plotly.json\n",
       "└─📄 __init__.py\n"
      ]
     }
@@ -133,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "be7742b5-bd30-4488-989a-c6ea1ad87701",
    "metadata": {},
    "outputs": [
@@ -162,7 +155,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "925e9066-8939-446a-b2a3-f2bbd99169ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83df206eef09462cacd3e27e7c44a8e0",
+       "model_id": "68cd58b9e5934457bbbcec49394e2793",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "f197326a-0e51-4e38-95eb-4d38aaed3a02",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fa3a18ff8f0431ca00971d4a7a75a56",
+       "model_id": "5cff5feb7c054683a8df7eb71f149476",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "dfd561ff-a690-4beb-97ab-eaee9b45257e",
    "metadata": {},
    "outputs": [
@@ -299,7 +292,7 @@
        "0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "4ceecd9a-f38f-4a42-bcbb-103e84b1875a",
    "metadata": {},
    "outputs": [
@@ -423,7 +416,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,95 +453,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "a8a0e217-3e02-49eb-8e8d-82620c8f3acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#?DefaultConfigShell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8c7f6d69-fc50-4cef-b496-62017a63e8e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mInit signature:\u001b[0m\n",
-       "\u001b[0mDefaultConfigShell\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;34m*\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfpth_script\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'script.py'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mlong_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfdir_appdata\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0min_batch\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mstatus\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mupdate_config_at_runtime\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdisplayfile_definitions\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mipyrun\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrunshell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDisplayfileDefinition\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdisplayfile_inputs_kwargs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mDict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdisplayfile_outputs_kwargs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mDict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfpths_inputs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfpths_outputs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfpth_params\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfpth_config\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPosixPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'config-shell_handler.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfpth_runhistory\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'runhistory.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfpth_log\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'log.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mcall\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'python -O'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mparams\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mDict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mshell_template\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'{{ call }} {{ fpth_script }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\\n'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mshell\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m     \n",
-       "a config object. all the definitions required to create the RunActions for a shell running tools are here.\n",
-       "\n",
-       "extends ConfigShell with validators only. \n",
-       "this creates opinionated relationships between the variables that dont necessarily have to exist.\n",
-       "\n",
-       "A likely way that this would need extending is to generate fpth_outputs based on other fields here. \n",
-       "This is very application specific, but could be done as shown in the Example.\n",
-       "\n",
-       "The validators, in some cases overwrite the parameters based on other parameters (so they are effectively\n",
-       "no longer user editable), or they default to something sensible. This reduces the amount of inputs that \n",
-       "need providing by the User. \n",
-       "\n",
-       "Notes:\n",
-       "    - validators can be overwritten, allowing users to keep the majority of default behaviour but overwrite \n",
-       "    some of it. \n",
-       "    - in Args below the minimum number of input vars are given\n",
-       "\n",
-       "Args: \n",
-       "    index (int):\n",
-       "    fpth_script (pathlib.Path): \n",
-       "    fdir_appdata (pathlib.Path): defaults to dir of fpth_script if not given\n",
-       "    displayfile_definitions (List[DisplayfileDefinition]): used to generate custom input and output forms\n",
-       "        using ipyautoui\n",
-       "        \n",
-       "Example:\n",
-       "    ::\n",
-       "\n",
-       "        class LineGraphConfigShell(DefaultConfigShell):\n",
-       "            # script specific outputs defined by custom ConfigShell class\n",
-       "            @validator(\"fpths_outputs\", always=True)\n",
-       "            def _fpths_outputs(cls, v, values):\n",
-       "                fdir = values['fdir_appdata']\n",
-       "                nm = values['name']\n",
-       "                paths = [fdir / ('out-'+nm+'.csv'), fdir / ('out-' + nm + '.plotly.json')]\n",
-       "                return paths\n",
-       "\u001b[0;31mInit docstring:\u001b[0m\n",
-       "Create a new model by parsing and validating input data from keyword arguments.\n",
-       "\n",
-       "Raises ValidationError if the input data cannot be parsed to form a valid model.\n",
-       "\u001b[0;31mFile:\u001b[0m           /mnt/c/engDev/git_mf/ipyrun/src/ipyrun/runshell.py\n",
-       "\u001b[0;31mType:\u001b[0m           ModelMetaclass\n",
-       "\u001b[0;31mSubclasses:\u001b[0m     LineGraphConfigShell\n"
+       "{'path': PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_core/input_schema_linegraph.py'),\n",
+       " 'obj_name': 'LineGraph',\n",
+       " 'module_name': 'input_schema_linegraph',\n",
+       " 'ftype': <FiletypeEnum.input: 'in'>,\n",
+       " 'ext': '.lg.json'}"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "?DefaultConfigShell"
+    "lg_inputs_dfd.dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "b7ec820f-a9c4-4cb7-85c9-33abad19b094",
    "metadata": {},
    "outputs": [
@@ -613,46 +553,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1e5a7f77-79ce-43ee-9d7e-a87ff3968505",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'index': 0,\n",
-       " 'fpth_script': PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_core/script_linegraph.py'),\n",
-       " 'name': 'linegraph',\n",
-       " 'long_name': '00 - Linegraph',\n",
-       " 'key': '00-linegraph',\n",
-       " 'fdir_appdata': PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph'),\n",
-       " 'in_batch': False,\n",
-       " 'status': None,\n",
-       " 'update_config_at_runtime': False,\n",
-       " 'displayfile_definitions': [{'path': PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_core/input_schema_linegraph.py'),\n",
-       "   'obj_name': 'LineGraph',\n",
-       "   'module_name': 'input_schema_linegraph',\n",
-       "   'ftype': <FiletypeEnum.input: 'in'>,\n",
-       "   'ext': '.lg.json'}],\n",
-       " 'displayfile_inputs_kwargs': {},\n",
-       " 'displayfile_outputs_kwargs': {},\n",
-       " 'fpths_inputs': [PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/in-00-linegraph.lg.json')],\n",
-       " 'fpths_outputs': [PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/out-00-linegraph.csv'),\n",
-       "  PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/out-00-linegraph.plotly.json')],\n",
-       " 'fpth_params': None,\n",
-       " 'fpth_config': PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/config-shell_handler.json'),\n",
-       " 'fpth_runhistory': PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/runhistory.csv'),\n",
-       " 'fpth_log': 'log.csv',\n",
-       " 'call': 'python -O',\n",
-       " 'params': {},\n",
-       " 'shell_template': '{{ call }} {{ fpth_script }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\\n',\n",
-       " 'shell': 'python -O /mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_core/script_linegraph.py /mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/in-00-linegraph.lg.json /mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/out-00-linegraph.csv /mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/00-linegraph/out-00-linegraph.plotly.json'}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class LineGraphConfigShell(DefaultConfigShell):\n",
     "\n",
@@ -671,7 +575,7 @@
     "    fdir_appdata=DIR_APPDATA,\n",
     "    displayfile_definitions=[lg_inputs_dfd],\n",
     ")\n",
-    "display(config.dict())"
+    "#display(config.dict())"
    ]
   },
   {
@@ -684,14 +588,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "435aeac5-31fa-407c-a970-01c7b5cbeaed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c73d381b5cb483799a8e6521a86dac0",
+       "model_id": "091b44f024254d7585e9418be47690a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -726,14 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "575524c5-e042-4897-b2fb-baeef3b8f217",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86236fec68c8437d8447b1d91acf6edb",
+       "model_id": "0ee3d5ed5249453f8865dd081be9ff76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "972a773b-ec5f-4e95-a542-d5867b334500",
    "metadata": {},
    "outputs": [
@@ -796,7 +700,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1021/3736187265.py:8 <module>\n",
+      "/tmp/ipykernel_1490/3736187265.py:8 <module>\n",
       "    config_batch: ConfigBatch(\n",
       "        fdir_root=PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata'),\n",
       "        fpth_config=PosixPath('/mnt/c/engDev/git_mf/ipyrun/examples/linegraph/linegraph_appdata/config-shell_handler.json'),\n",
@@ -837,14 +741,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "ce0a2437-73c9-4de9-92ab-f527c704f14d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ce592b7e45142aea6b515687b6508c7",
+       "model_id": "e84e4420b23c460cb820d64ab860a285",
        "version_major": 2,
        "version_minor": 0
       },
