--- a/examples/linegraph/linegraph_app.ipynb
+++ b/examples/linegraph/linegraph_app.ipynb
@@ -10,51 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ab562720-fa63-4abe-91d5-231100e11abe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import pathlib\n",
-    "\n",
-    "#sys.path.append(str(pathlib.Path('../../src').resolve())) # append ipyrun. TODO: for dev only. remove at build time.\n",
-    "#sys.path.append(str(pathlib.Path('../../../ipyautoui/src').resolve())) # append ipyautoui. TODO: for dev only. remove at build time.\n",
-    "\n",
-    "import subprocess\n",
-    "from pydantic import validator\n",
-    "\n",
-    "from ipyrun import RunApp, BatchApp, ConfigShell, DefaultConfigShell, RunShellActions \n",
-    "from ipyrun.runshell import DisplayfileDefinition, create_displayfile_renderer, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
-    "\n",
-    "from ipyautoui import AutoUi, AutoUiConfig\n",
-    "from ipyautoui import DisplayFiles\n",
-    "from ipyautoui.displayfile import display_python_file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f186b85b-aba9-4c7c-a62a-287ddd9f5b8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DIR_CORE = pathlib.Path('./linegraph_core').resolve()\n",
-    "FPTH_SCRIPT = DIR_CORE / 'script_linegraph.py'\n",
-    "FPTH_INPUTS_SCHEMA = DIR_CORE / 'input_schema_linegraph.py'\n",
-    "DIR_APPDATA = pathlib.Path('./linegraph_appdata').resolve()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "9c501296-5ca0-47e3-b516-0c5696f5d5f0",
+   "id": "ab562720-fa63-4abe-91d5-231100e11abe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f6c4bd5ad4a4004bdc8a4d4d0ac9b4f",
+       "model_id": "5a956fc0378844b0a9162e46ca5da684",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,6 +30,27 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "import pathlib\n",
+    "\n",
+    "sys.path.append(str(pathlib.Path('../../src').resolve())) # append ipyrun. TODO: for dev only. remove at build time.\n",
+    "#sys.path.append(str(pathlib.Path('../../../ipyautoui/src').resolve())) # append ipyautoui. TODO: for dev only. remove at build time.\n",
+    "\n",
+    "import subprocess\n",
+    "from pydantic import validator\n",
+    "\n",
+    "from ipyrun import RunApp, BatchApp, ConfigShell, DefaultConfigShell, RunShellActions \n",
+    "from ipyrun.runshell import DisplayfileDefinition, create_displayfile_renderer, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
+    "\n",
+    "from ipyautoui import AutoUi, AutoUiConfig\n",
+    "from ipyautoui import DisplayFiles\n",
+    "from ipyautoui.displayfile import display_python_file\n",
+    "\n",
+    "DIR_CORE = pathlib.Path('./linegraph_core').resolve()\n",
+    "FPTH_SCRIPT = DIR_CORE / 'script_linegraph.py'\n",
+    "FPTH_INPUTS_SCHEMA = DIR_CORE / 'input_schema_linegraph.py'\n",
+    "DIR_APPDATA = pathlib.Path('./linegraph_appdata').resolve()\n",
+    "\n",
     "# extend DefaultConfigShell to LineGraphConfigShell\n",
     "\n",
     "class LineGraphConfigShell(DefaultConfigShell):\n",
@@ -107,7 +91,6 @@
     "# extend ConfigBatch to LineGraphConfigBatch\n",
     "    \n",
     "class LineGraphConfigBatch(ConfigBatch):\n",
-    "\n",
     "    @validator(\"cls_config\", always=True)\n",
     "    def _cls_config(cls, v, values):\n",
     "        \"\"\"bundles RunApp up as a single argument callable\"\"\"\n",
@@ -139,13 +122,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510d6b65-031c-4cfc-ad33-360a6a8951fd",
+   "id": "84aac46a-41b8-4158-a399-d2a9f28e47f7",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:light"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
