--- a/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "37490da4-9a5f-494e-9428-03a675ca54b1",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "b2d5ee14-47fb-47ca-865a-204a64b52a19",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "77b7c163-d3dd-493f-baf3-ded7830df972",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ba438ca2-e26f-4555-9e98-f5281fa86cc0",
    "metadata": {},
    "outputs": [
@@ -89,13 +89,25 @@
      "output_type": "stream",
      "text": [
       "📁 linegraph/\n",
+      "├─📄 in-test.lg.json\n",
       "├─📄 linegraph_app.ipynb\n",
       "├─📁 linegraph_appdata/\n",
+      "│ ├─📁 00-linegraph/\n",
+      "│ │ ├─📄 config-shell_handler.json\n",
+      "│ │ ├─📄 in-00-linegraph.lg.json\n",
+      "│ │ ├─📄 out-00-linegraph.csv\n",
+      "│ │ └─📄 out-00-linegraph.plotly.json\n",
+      "│ ├─📁 01-linegraph/\n",
+      "│ │ ├─📄 config-shell_handler.json\n",
+      "│ │ └─📄 in-01-linegraph.lg.json\n",
+      "│ └─📄 config-shell_handler.json\n",
       "├─📄 linegraph_app_tutorial.ipynb\n",
       "├─📁 linegraph_core/\n",
       "│ ├─📄 input_schema_linegraph.py\n",
       "│ ├─📄 script_linegraph.py\n",
       "│ └─📄 __init__.py\n",
+      "├─📄 out-test.csv\n",
+      "├─📄 out-test.plotly.json\n",
       "└─📄 __init__.py\n"
      ]
     }
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "be7742b5-bd30-4488-989a-c6ea1ad87701",
    "metadata": {},
    "outputs": [
@@ -155,7 +167,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "925e9066-8939-446a-b2a3-f2bbd99169ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68cd58b9e5934457bbbcec49394e2793",
+       "model_id": "5f3b4e1d27cd4103a9ad0b69d2b5eb45",
        "version_major": 2,
        "version_minor": 0
       },
