DisplayFiles --> AutoDisplay displayfile --> autodisplay Displayfile --> AutoDisplay

--- a/examples/notebooks/00_MakingARunAppWidget.ipynb
+++ b/examples/notebooks/00_MakingARunAppWidget.ipynb
@@ -76,7 +76,7 @@
             ],
             "source": [
                 "\n",
-                "from ipyrun._ipydisplayfile import DisplayFile\n",
+                "from ipyrun._ipyautodisplay import DisplayFile\n",
                 "fpth_script = r'..\\scripts\\expansion_vessel_sizing.py'\n",
                 "d = DisplayFile(fpth_script)\n",
                 "d.preview_fpth()"
