create_autodisplay_renderer --> create_autodisplay_map

--- a/examples/linegraph/linegraph_app.ipynb
+++ b/examples/linegraph/linegraph_app.ipynb
@@ -40,7 +40,7 @@
                 "from pydantic import validator\n",
                 "\n",
                 "from ipyrun import RunApp, BatchApp, ConfigShell, DefaultConfigShell, RunShellActions \n",
-                "from ipyrun.runshell import AutoDisplayDefinition, create_autodisplay_renderer, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
+                "from ipyrun.runshell import AutoDisplayDefinition, create_autodisplay_map, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
                 "\n",
                 "from ipyautoui import AutoUi, AutoUiConfig\n",
                 "from ipyautoui import AutoDisplay\n",
