--- a/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -25,7 +25,7 @@
                 "from pydantic import validator\n",
                 "\n",
                 "from ipyrun import RunApp, BatchApp, ConfigShell, DefaultConfigShell, RunShellActions \n",
-                "from ipyrun.runshell import AutoDisplayDefinition, create_autodisplay_renderer, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
+                "from ipyrun.runshell import AutoDisplayDefinition, create_autodisplay_map, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
                 "\n",
                 "from ipyautoui import AutoUi, AutoUiConfig\n",
                 "from ipyautoui import AutoDisplay\n",
@@ -257,7 +257,7 @@
                 "                      ftype='in',\n",
                 "                      ext='.lg.json'\n",
                 ")\n",
-                "lg_inputs_renderer = create_autodisplay_renderer(lg_inputs_dfd)\n",
+                "lg_inputs_renderer = create_autodisplay_map(lg_inputs_dfd)\n",
                 "\n",
                 "AutoDisplay.from_paths(paths=['in-test.lg.json'],user_file_renderers=lg_inputs_renderer)"
             ]
