--- a/examples/linegraph/linegraph_app.ipynb
+++ b/examples/linegraph/linegraph_app.ipynb
@@ -42,7 +42,7 @@
                 "from ipyrun import RunApp, BatchApp, ConfigShell, DefaultConfigShell, RunShellActions \n",
                 "from ipyrun.runshell import AutoDisplayDefinition, create_autodisplay_map, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
                 "\n",
-                "from ipyautoui import AutoUi, AutoUiConfig\n",
+                "from ipyautoui import AutoUi\n",
                 "from ipyautoui import AutoDisplay\n",
                 "from ipyautoui.autodisplay import display_python_file\n",
                 "\n",
