--- a/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -25,9 +25,9 @@
                 "from pydantic import validator\n",
                 "\n",
                 "from ipyrun import RunApp, BatchApp, ConfigShell, DefaultConfigShell, RunShellActions \n",
-                "from ipyrun.runshell import AutoDisplayDefinition, create_autodisplay_map, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
+                "from ipyrun.runshell import AutoDisplayDefinition, create_autodisplay_renderer, ConfigBatch, DefaultConfigShell, DefaultBatchActions, BatchShellActions\n",
                 "\n",
-                "from ipyautoui import AutoUi, AutoUiConfig\n",
+                "from ipyautoui import AutoUi\n",
                 "from ipyautoui import AutoDisplay\n",
                 "from ipyautoui.autodisplay import display_python_file"
             ]
@@ -211,11 +211,8 @@
                 }
             ],
             "source": [
-                "\n",
-                "# ?AutoUiConfig\n",
-                "config_lgui =AutoUiConfig(ext='.lg.json', pydantic_model=LineGraph)\n",
                 "lg = LineGraph()\n",
-                "AutoUi(pydantic_obj=lg, path='in-test.lg.json', config_autoui=config_lgui)"
+                "AutoUi(schema=LineGraph, value=lg.dict(). path='in-test.lg.json', ext='.lg.json')"
             ]
         },
         {
@@ -257,9 +254,9 @@
                 "                      ftype='in',\n",
                 "                      ext='.lg.json'\n",
                 ")\n",
-                "lg_inputs_renderer = create_autodisplay_map(lg_inputs_dfd)\n",
+                "lg_inputs_renderer = create_autodisplay_renderer(lg_inputs_dfd)\n",
                 "\n",
-                "AutoDisplay.from_paths(paths=['in-test.lg.json'],file_renderers=lg_inputs_renderer)"
+                "AutoDisplay.from_paths(paths=['in-test.lg.json'],user_file_renderers=lg_inputs_renderer)"
             ]
         },
         {
