slimmed down requirements. removed pip only devtools. bug fix requirements.txt

--- a/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -797,9 +797,8 @@
     "    cls_config=LineGraphConfigShell,\n",
     "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
     ")\n",
-    "from devtools import debug\n",
     "\n",
-    "debug(config_batch)\n",
+    "display(config_batch.dict())\n",
     "print('---')"
    ]
   },
