--- a/docs/intro.ipynb
+++ b/docs/intro.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "remove-input"
@@ -31,14 +31,52 @@
       "text/markdown": [
        "# ipyrun\n",
        "\n",
-       "ipyrun is UI first package built on ipywidgets designed for rapidly creating an app user interface for use in a jupyter notebook / lab or voila app. To run a script or process and generate resultant output files. The app caches input, output and runtime data, such that the previous state of the app is available to the user when returning. \n",
+       "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/maxfordham/ipyrun/HEAD)\n",
+       "[![Code style: black](https://img.shields.io/badge/code%20style-black-000000.svg)](https://github.com/psf/black)\n",
        "\n",
-       "## Use cases\n",
+       "![ipyrun-logo](docs/images/logo.png)\n",
        "\n",
-       "A generic user interface for running scripts.\n",
-       "Data inputs to scripts are defined by standard datafiles (e.g. csv, json), and data files are generated as outputs when the script is run.\n",
+       "ipyrun is UI first package built on ipywidgets designed for rapidly creating an app user interface for use in a\n",
+       "jupyter notebook / lab or voila app. To run a script or process and generate resultant output files.\n",
+       "The app caches input, output and runtime data, such that the previous state of the app is available to the user when returning.\n",
+       "\n",
+       "## Try it online!\n",
+       "\n",
+       "launch [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/maxfordham/ipyrun/HEAD).\n",
+       "\n",
+       "\n",
+       "## Screenshots\n",
+       "\n",
+       "`# TODO: add screenshots`\n",
+       "\n",
+       "## Description\n",
+       "\n",
+       "A generic user interface for running processes.\n",
+       "Data inputs to the process are defined by standard datafiles (e.g. csv, json), and data files are generated as outputs when the script is run.\n",
        "A timestamped record of script execution is maintained.\n",
        "An ipywdiget user interface allows users to edit script input data and view outputs of script execution.\n",
+       "\n",
+       "## Process\n",
+       "\n",
+       "The rationale behind ipyrun is that by following the simple process outlined below, the user does not need to think\n",
+       "too much about creating an interface or how to cache data, with this being templated by the ipyrun configuration.\n",
+       "\n",
+       "ipyrun is \"UI first\",  upon which different, user-applied configurations can be attached. ipyrun ships with a\n",
+       "`DefaultRunConfig` that is intended for executing python scripts or packages. New users are recommended to use\n",
+       "this configuration, creating new configurations is an \"advanced feature\" that would require that should only be used if \n",
+       "absolutely required.\n",
+       "\n",
+       "```{note}\n",
+       "it is possible to set up new ipyrun configurations \n",
+       "```\n",
+       "\n",
+       "|     |                                          |                                                            |\n",
+       "| --- | ---------------------------------------- | ---------------------------------------------------------- |\n",
+       "| 1   | ![](docs/images/pydantic-jsonschema.png) | __create an input schema__                                 |\n",
+       "| 2   | ![](docs/images/logo-ipyautoui.png)      | __generate an input form using ipyautoui__                 |\n",
+       "| 3   | ![](docs/images/script-or-package.png)   | __create a script or process to execute__                  |\n",
+       "| 4   | ![](docs/images/logo.png)                | __create a RunApp instance to manage UI and data-caching__ |\n",
+       "\n",
        "\n",
        "## Install\n",
        "\n",
@@ -59,7 +97,7 @@
        "\n",
        "## Build\n",
        "\n",
-       "- [conda-bld](docs/conda-bld.md)\n"
+       "- [conda-bld](docs/conda-bld.md)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
