did a find replace of FPTH_SCRIPT --> PATH_RUN

--- a/docs/examples/linegraph/linegraph_app.ipynb
+++ b/docs/examples/linegraph/linegraph_app.ipynb
@@ -56,7 +56,7 @@
                 "\n",
                 "\n",
                 "DIR_CORE = pathlib.Path(\"./linegraph_core\").resolve()\n",
-                "FPTH_SCRIPT = DIR_CORE / \"script_linegraph.py\"\n",
+                "PATH_RUN = DIR_CORE / \"script_linegraph.py\"\n",
                 "FPTH_INPUTS_SCHEMA = DIR_CORE / \"input_schema_linegraph.py\"\n",
                 "DIR_APPDATA = pathlib.Path(\"./linegraph_appdata\").resolve()\n",
                 "\n",
@@ -66,7 +66,7 @@
                 "class LineGraphConfigShell(DefaultConfigShell):\n",
                 "    @validator(\"path_run\", always=True, pre=True)\n",
                 "    def _set_path_run(cls, v, values):\n",
-                "        return FPTH_SCRIPT\n",
+                "        return PATH_RUN\n",
                 "\n",
                 "    @validator(\"fpths_outputs\", always=True)\n",
                 "    def _fpths_outputs(cls, v, values):\n",
