--- a/docs/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/docs/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -116,7 +116,7 @@
                 "from seedir import seedir\n",
                 "\n",
                 "DIR_CORE = pathlib.Path('./linegraph_core').resolve()\n",
-                "FPTH_SCRIPT = DIR_CORE / 'script_linegraph.py'\n",
+                "PATH_RUN = DIR_CORE / 'script_linegraph.py'\n",
                 "FPTH_INPUTS_SCHEMA = DIR_CORE / 'input_schema_linegraph.py'\n",
                 "DIR_APPDATA = pathlib.Path('./linegraph_appdata').resolve()\n",
                 "\n",
@@ -512,7 +512,7 @@
                 }
             ],
             "source": [
-                "display_python_file(FPTH_SCRIPT)"
+                "display_python_file(PATH_RUN)"
             ]
         },
         {
@@ -623,7 +623,7 @@
                 "# ?DefaultConfigShell  # show help\n",
                 "\n",
                 "config = DefaultConfigShell(\n",
-                "    path_run=FPTH_SCRIPT,\n",
+                "    path_run=PATH_RUN,\n",
                 "    fdir_appdata=DIR_APPDATA,\n",
                 "    autodisplay_definitions=[lg_inputs_dfd],\n",
                 ")\n",
@@ -745,7 +745,7 @@
                 "class LineGraphConfigShell(DefaultConfigShell):\n",
                 "    @validator(\"path_run\", always=True, pre=True)\n",
                 "    def _set_path_run(cls, v, values):\n",
-                "        return FPTH_SCRIPT\n",
+                "        return PATH_RUN\n",
                 "\n",
                 "    @validator(\"fpths_outputs\", always=True)\n",
                 "    def _fpths_outputs(cls, v, values):\n",
@@ -1004,7 +1004,7 @@
                 "class NewLineGraphConfigShell(DefaultConfigShell):\n",
                 "    @validator(\"path_run\", always=True, pre=True)\n",
                 "    def _set_path_run(cls, v, values):\n",
-                "        return FPTH_SCRIPT\n",
+                "        return PATH_RUN\n",
                 "\n",
                 "    @validator(\"fpths_outputs\", always=True)\n",
                 "    def _fpths_outputs(cls, v, values):\n",
