updated the way that ipyrun run packages using the __main__.py and appending to path. more pythonic.

--- a/docs/examples/linegraph/linegraph_app.ipynb
+++ b/docs/examples/linegraph/linegraph_app.ipynb
@@ -10,10 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7462c332-e84b-4b8d-a4b5-6d90f6be7da3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e9d703644c8432a9a0b75ea7fb2de91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BatchApp(children=(VBox(children=(HTML(value='<h1>Plot Straight Lines</h1>\\n<h3>example RunApp</h3>'), HBox(ch…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import sys\n",
     "import pathlib\n",
@@ -41,7 +56,7 @@
     "\n",
     "\n",
     "DIR_CORE = pathlib.Path(\"./linegraph_core\").resolve()\n",
-    "PATH_RUN = DIR_CORE / \"script_linegraph.py\"\n",
+    "PATH_RUN = DIR_CORE #/ \"script_linegraph.py\"\n",
     "FPTH_INPUTS_SCHEMA = DIR_CORE / \"input_schema_linegraph.py\"\n",
     "DIR_APPDATA = pathlib.Path(\"./linegraph_appdata\").resolve()\n",
     "\n",
@@ -116,14 +131,6 @@
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b8afd7b-5e77-4516-8462-e3d1f73f2851",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
