reran / reviewed examples from docs following updates

--- a/docs/examples/linegraph/linegraph_app.ipynb
+++ b/docs/examples/linegraph/linegraph_app.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e9d703644c8432a9a0b75ea7fb2de91",
+       "model_id": "a81997cbcf0148eca81f84c3c239ce68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,6 +34,7 @@
     "import pathlib\n",
     "import subprocess\n",
     "from pydantic import validator\n",
+    "from IPython.display import display\n",
     "\n",
     "from ipyautoui import AutoUi\n",
     "from ipyautoui import AutoDisplay\n",
