--- a/docs/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/docs/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "37490da4-9a5f-494e-9428-03a675ca54b1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b2d5ee14-47fb-47ca-865a-204a64b52a19",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "77b7c163-d3dd-493f-baf3-ded7830df972",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ba438ca2-e26f-4555-9e98-f5281fa86cc0",
    "metadata": {},
    "outputs": [
@@ -93,24 +93,30 @@
       "│ └─📄 in-00-linegraph.lg.json\n",
       "├─📄 in-test.lg.json\n",
       "├─📄 linegraph_app.ipynb\n",
-      "├─📄 linegraph_app.py\n",
       "├─📁 linegraph_appdata/\n",
-      "│ ├─📁 00-linegraph/\n",
+      "│ ├─📁 00-linegraph_core/\n",
       "│ │ ├─📄 config-shell_handler.json\n",
-      "│ │ ├─📄 in-00-linegraph.lg.json\n",
-      "│ │ ├─📄 out-00-linegraph.csv\n",
-      "│ │ └─📄 out-00-linegraph.plotly.json\n",
-      "│ ├─📁 01-linegraph/\n",
+      "│ │ ├─📄 in-00-linegraph_core.lg.json\n",
+      "│ │ ├─📄 out-00-linegraph_core.csv\n",
+      "│ │ └─📄 out-00-linegraph_core.plotly.json\n",
+      "│ ├─📁 01-linegraph_core/\n",
       "│ │ ├─📄 config-shell_handler.json\n",
-      "│ │ ├─📄 in-01-linegraph.lg.json\n",
-      "│ │ ├─📄 out-01-linegraph.csv\n",
-      "│ │ └─📄 out-01-linegraph.plotly.json\n",
+      "│ │ ├─📄 in-01-linegraph_core.lg.json\n",
+      "│ │ ├─📄 out-01-linegraph_core.csv\n",
+      "│ │ └─📄 out-01-linegraph_core.plotly.json\n",
+      "│ ├─📁 02-linegraph_core/\n",
+      "│ │ ├─📄 config-shell_handler.json\n",
+      "│ │ ├─📄 in-02-linegraph_core.lg.json\n",
+      "│ │ ├─📄 out-02-linegraph_core.csv\n",
+      "│ │ └─📄 out-02-linegraph_core.plotly.json\n",
       "│ └─📄 config-shell_handler.json\n",
       "├─📄 linegraph_app_tutorial.ipynb\n",
       "├─📁 linegraph_core/\n",
       "│ ├─📄 input_schema_linegraph.py\n",
+      "│ ├─📄 make_graph.py\n",
       "│ ├─📄 script_linegraph.py\n",
-      "│ └─📄 __init__.py\n",
+      "│ ├─📄 __init__.py\n",
+      "│ └─📄 __main__.py\n",
       "├─📄 out-test.csv\n",
       "├─📄 out-test.plotly.json\n",
       "└─📄 __init__.py\n"
@@ -152,10 +158,8 @@
       "text/markdown": [
        "\n",
        "```python\n",
-       "import sys\n",
+       "\n",
        "from pydantic import BaseModel , Field, conint\n",
-       "import typing\n",
-       "import pathlib\n",
        "\n",
        "#sys.path.append(pathlib.Path(__file__).parents[3])\n",
        "\n",
@@ -212,7 +216,7 @@
        "\u001b[0;34m\u001b[0m    \u001b[0mpath\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0msave_controls\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mipyautoui\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautoui\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSaveControls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mSaveControls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_buttonbar\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'save_buttonbar'\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mshow_raw\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfn_onsave\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mfunction\u001b[0m \u001b[0mAutoUi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;32mlambda\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mat\u001b[0m \u001b[0;36m0x7fa9b3c85790\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mfn_onsave\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mfunction\u001b[0m \u001b[0mAutoUi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;32mlambda\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mat\u001b[0m \u001b[0;36m0x7f8674ea94c0\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mvalidate_onchange\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mupdate_fdir_to_path_parent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -252,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e369cbac7695487e93493e3c78f3efe0",
+       "model_id": "0cb4e893203f4243ba4fee1882c11738",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +304,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a7bc8940c35405a9c635584ca5a8521",
+       "model_id": "b4ce53ba61264430abf6cb7a1a9961ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,6 +596,8 @@
       "text/plain": [
        "{'index': 0,\n",
        " 'path_run': PosixPath('/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py'),\n",
+       " 'pythonpath': PosixPath('/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core'),\n",
+       " 'run': 'script_linegraph.py',\n",
        " 'name': 'linegraph',\n",
        " 'long_name': '00 - Linegraph',\n",
        " 'key': '00-linegraph',\n",
@@ -615,8 +621,8 @@
        " 'fpth_log': PosixPath('00-linegraph/log.csv'),\n",
        " 'call': 'python -O',\n",
        " 'params': {},\n",
-       " 'shell_template': '{{ call }} {{ path_run }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\\n',\n",
-       " 'shell': 'python -O /mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py 00-linegraph/in-00-linegraph.lg.json'}"
+       " 'shell_template': '{{ call }} {{ run }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\\n',\n",
+       " 'shell': 'python -O script_linegraph.py 00-linegraph/in-00-linegraph.lg.json'}"
       ]
      },
      "metadata": {},
@@ -691,7 +697,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73894b9a94034fd7b00b532ce21a6810",
+       "model_id": "06fea9cd02e0451f8bdbe60c593a2a88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,7 +739,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65538357d1674649a3921310cd4747c3",
+       "model_id": "1b7a87f773704a03a2ff400edf23fd0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -842,7 +848,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4015f2fdd14740cabc460a0bf25d35aa",
+       "model_id": "cb6e7385f8aa4ebf84691d3bbaa46d29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -919,7 +925,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c93119a73ce41529d2f7a9748a3cc3d",
+       "model_id": "e8c455dda58f427eabe5482f9ca1d44e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -986,14 +992,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "7982e978-57ce-4964-9307-51c6cf97af55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e857180285e46d3bbf6889d60db116d",
+       "model_id": "3ee91a4e9edb4e7b8be64c9c646524e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1107,14 +1113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "060e1ff5-b285-426a-99d6-d2d1b3991174",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fa8b4172a204a87a2f37be88b27fdd9",
+       "model_id": "6feabeefa7b64b86a469172b29ae8192",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1152,14 +1158,6 @@
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfbd3ccb-e881-4ec3-ade0-3603e3c5bf32",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
