added function-machine-icon.png to docs!

--- a/docs/under-the-hood.ipynb
+++ b/docs/under-the-hood.ipynb
@@ -9,6 +9,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72f54237-4cec-409b-9c7c-f5d10abdef9a",
+   "metadata": {},
+   "source": [
+    "In school I remember learning about functions as number machines with a set of defined inputs, yielding a set of defined outputs:\n",
+    "\n",
+    "[![function-machines](images/function-machine-icon.png)](https://teleskola.mt/week-14-sequences-and-function-machines/)\n",
+    "\n",
+    "The truth is that within Science and Engineering this is still true of the majority of processes we need to calculate or analyse. \n",
+    "It is very simple when writing code, or fancy and reactive User Interfaces to forget this: at its core `ipyrun` tries to revert back to this simplicity! \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "f7d24cb3-4885-4716-8244-371d40614961",
