--- a/docs/examples/linegraph/linegraph_app.ipynb
+++ b/docs/examples/linegraph/linegraph_app.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a81997cbcf0148eca81f84c3c239ce68",
+       "model_id": "2e82c6e5e6f04ad2a34b15a8f9e12da3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,6 +65,11 @@
     "\n",
     "\n",
     "class LineGraphConfigShell(DefaultConfigShell):\n",
+    "    \n",
+    "    @validator(\"update_config_at_runtime\", always=True, pre=True)\n",
+    "    def _update_config_at_runtime(v):\n",
+    "        return False\n",
+    "    \n",
     "    @validator(\"path_run\", always=True, pre=True)\n",
     "    def _set_path_run(cls, v, values):\n",
     "        return PATH_RUN\n",
@@ -132,6 +137,14 @@
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e4b2093-ff6b-4aa0-a0e5-acde32023b50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
