--- a/docs/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/docs/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -88,8 +88,6 @@
      "text": [
       "📁 linegraph/\n",
       "├─📄 linegraph_app.ipynb\n",
-      "├─📁 00-linegraph_core/\n",
-      "│ └─📄 in-00-linegraph_core.lg.json\n",
       "├─📁 linegraph_core/\n",
       "│ ├─📄 __main__.py\n",
       "│ ├─📄 script_linegraph.py\n",
@@ -97,10 +95,7 @@
       "│ ├─📄 input_schema_linegraph.py\n",
       "│ └─📄 __init__.py\n",
       "├─📁 linegraph_appdata/\n",
-      "├─📄 out-test.plotly.json\n",
-      "├─📄 out-test.csv\n",
       "├─📄 linegraph_app_tutorial.ipynb\n",
-      "├─📄 in-test.lg.json\n",
       "└─📄 __init__.py\n"
      ]
     }
@@ -112,6 +107,7 @@
     "PATH_RUN = DIR_CORE\n",
     "FPTH_INPUTS_SCHEMA = DIR_CORE / 'input_schema_linegraph.py'\n",
     "DIR_APPDATA = pathlib.Path('./linegraph_appdata').resolve()\n",
+    "DIR_APPDATA.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "seedir(exclude_folders=['.ipynb_checkpoints', '__pycache__'], style='emoji')"
    ]
@@ -167,7 +163,7 @@
    ],
    "source": [
     "from linegraph_core.input_schema_linegraph import LineGraph\n",
-    "display_python_file(FPTH_INPUTS_SCHEMA)  # it is advised that input_schema's get there own python file"
+    "display_python_file(FPTH_INPUTS_SCHEMA)  # it is advised that input_schema's get their own python file"
    ]
   },
   {
@@ -198,7 +194,7 @@
        "\u001b[0;34m\u001b[0m    \u001b[0mpath\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0msave_controls\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mipyautoui\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautoui\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSaveControls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mSaveControls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_buttonbar\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'save_buttonbar'\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mshow_raw\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfn_onsave\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mfunction\u001b[0m \u001b[0mAutoUi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;32mlambda\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mat\u001b[0m \u001b[0;36m0x7f9c7a4b90d0\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mfn_onsave\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mfunction\u001b[0m \u001b[0mAutoUi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;32mlambda\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mat\u001b[0m \u001b[0;36m0x7f04b8b3a310\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mvalidate_onchange\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mupdate_fdir_to_path_parent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -228,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16419ea02cd24224b9b8178fa33a1f77",
+       "model_id": "b55344aac39243b4a3ef57ef00e31165",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d005dc8836a8423e9a732063ddd493ad",
+       "model_id": "70839ff7c49d41129902e35c3ebbaf14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,7 +362,7 @@
     "- There must be a way to pass input variables to this script\n",
     "    - The default way in `RunShell` is that the filepath of the inputs and outputs files are passed as a `sys.argv`s\n",
     "- In the simple example below, the script can be tested by simply running:\n",
-    "    - `python -O linegraph_core/script_linegraph.py in-test.lg.json out-test.csv out-test.plotly.json`"
+    "    - `python -O -m linegraph_core in-test.lg.json out-test.csv out-test.plotly.json`"
    ]
   },
   {
@@ -474,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "1e5a7f77-79ce-43ee-9d7e-a87ff3968505",
    "metadata": {},
    "outputs": [
@@ -520,8 +516,7 @@
    "source": [
     "# DefaultConfigShell defines how to cache data to be run by the App\n",
     "\n",
-    "class LineGraphConfigShell(DefaultConfigShell):\n",
-    "    \n",
+    "class LineGraphConfigShell(DefaultConfigShell):    \n",
     "    @validator(\"fpths_outputs\", always=True)\n",
     "    def _fpths_outputs(cls, v, values):\n",
     "        fdir = values[\"fdir_appdata\"]\n",
@@ -550,14 +545,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "435aeac5-31fa-407c-a970-01c7b5cbeaed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebb7e1e7d3ee46f2bc88360ca989e42e",
+       "model_id": "33c405270be84a939672268c4b49fbaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "575524c5-e042-4897-b2fb-baeef3b8f217",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d03f9b293bca49e8af9c40bb52e45236",
+       "model_id": "1eccf3fcddf141cdb46d26d1c7f07c0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "972a773b-ec5f-4e95-a542-d5867b334500",
    "metadata": {},
    "outputs": [
@@ -700,14 +695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "ce0a2437-73c9-4de9-92ab-f527c704f14d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8123114d64f64c43935e96583318f506",
+       "model_id": "36e6662837ea4120a97cea260f3298db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -762,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "fbbdbea0-288b-4369-8bc5-028df09dc898",
    "metadata": {},
    "outputs": [],
@@ -775,14 +770,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "76bfb8a4-6f6a-418f-967f-74b9ed91385f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44287be1d0c640aca6ee5281c71b6d25",
+       "model_id": "ccdf69b2d17148e789c1f03bd39354f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -849,14 +844,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "7982e978-57ce-4964-9307-51c6cf97af55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56fdc6ca81d04a2087cbe16ba5857b72",
+       "model_id": "544872d825c64c6ca6fcb7e594588899",
        "version_major": 2,
        "version_minor": 0
       },
@@ -970,14 +965,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "060e1ff5-b285-426a-99d6-d2d1b3991174",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66d659a9113c477dbcf98035e19722ba",
+       "model_id": "622dd067929040b3a40f174a104c4e5b",
        "version_major": 2,
        "version_minor": 0
       },
